{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7d772e7d-76a2-48dc-849e-2c9f884468e3",
            "actions": [
                {
                    "name": "goTo",
                    "type": "Button",
                    "id": "2185f5eb-1b96-4122-8e6e-f26af26c9272",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "toggleWalk",
                    "type": "Button",
                    "id": "f62c51b0-7bc1-4b7c-b819-8a70550739a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "activeSkill",
                    "type": "Button",
                    "id": "328bd8df-d671-4420-a969-f4298ce0d792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "807d6cc6-e506-4950-b721-b7b8cbc513d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "zoom",
                    "type": "Value",
                    "id": "87595048-9723-4075-8871-72cedc3f19f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "lookAround",
                    "type": "Button",
                    "id": "3c262a7a-22c7-43a4-adea-296e3f6747f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "pauseGame",
                    "type": "Button",
                    "id": "8a913b92-8a8c-441b-b11d-eaf44ac8de43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ecd0de8-e733-46d3-a18f-bc6bcb4e9506",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "goTo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0cd8e48-9e10-4f17-8c5d-82d284ce22d2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "toggleWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4170cbfe-eef5-42cd-9488-d1e93b9e512c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "activeSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1b0ab73-2987-4665-ad8a-3b0469463cd8",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "158dafb8-5a02-4728-9288-8a3f090bcc64",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "225e5fd4-1a94-46e1-8791-0e033906735d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25346567-0ec1-440c-9278-9fe407ea5f55",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillUse",
            "id": "7599e4e3-87df-4ff3-bf0b-e7bba48b068f",
            "actions": [
                {
                    "name": "activate",
                    "type": "Button",
                    "id": "85570013-3972-4b7c-aec4-8645454146ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cancel",
                    "type": "Button",
                    "id": "c0b23e70-bcaa-4324-89e1-b5d2827d5040",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce93d3a8-4881-4934-9419-b939aa73a80b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "activate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bedac9e-a3db-4f13-baf7-4960747f3b44",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}